Fixed slider width on smaller screens

--- a/less/main.less
+++ b/less/main.less
@@ -148,7 +148,7 @@ img.fit {
   right: 0;
   bottom: 60px;
   width: 50%;
-  min-width: @screen-xs-max * 0.5;
+  min-width: @screen-xs-max * 0.8;
   margin: 0 auto;
   z-index: 5;
   .opacity(0.4);
@@ -468,7 +468,7 @@ img.fit {
   .front { padding: 8px; }
   .title { font-size: 48px; }
   .post-content>.post-content-body { font-size: 18px; line-height: 20px; padding: 4px; }
-  #slider { width: 100%; max-width: auto; }
+  #slider { width: 80%; min-width: auto; }
 }
 
 @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
